Lagt til resource eksempel

--- a/templates/sykmelding/sykmelding.hbs
+++ b/templates/sykmelding/sykmelding.hbs
@@ -116,9 +116,19 @@
             border: 0;
             border-top: 1px solid #e0e0e0;
         }
+
+        .navlogo {
+            position: absolute;
+            top: 1cm;
+            right: 1.5cm;
+            width: 60px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
+
+<img alt="NAV logo" class="navlogo" src="{{ image "logo.png" }}"/>
 
 <table>
     <tr>
