Fikset egenmeldingsdager og lagt til tester

--- a/templates/sykmelding/sykmelding.hbs
+++ b/templates/sykmelding/sykmelding.hbs
@@ -203,7 +203,7 @@
 <div class="text-thin section-subtitle" style="color: #555555">Oppgitt av ansatt selv ved bekreftelse av sykmelding.</div>
 <table>
     {{#each egenmeldingsdager}}
-    <tr><td class="text-regular">{{fomFormatted}} – {{tomFormatted}}</td></tr>
+    <tr><td class="text-regular">{{fom}} – {{tom}}</td></tr>
     {{/each}}
 </table>
 {{/if}}
